Memasukkan gambar ke html

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
       <div class="satu">
         <div class="satu-kiri">
           <div class="judul-pengenalan">This website is awesome</div>
-          <div class="isi-pengenalan">This website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast</div>
+          <div class="isi-pengenalan">This website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast. This website has some subtext that goes here under the main title. It's a smaller font and color is lower contrast</div>
           <button class="sign-up">Sign Up</button>
         </div>
         <div class="satu-kanan">
-          <div class="">this a place holder for an image</div>
+
+          <!-- <div class="">this a place holder for an image</div> -->
           <!-- masukkan gambar disini -->
-          <img src="" alt="Gambar bebas saja">
+          <img src="https://images.pexels.com/photos/33622480/pexels-photo-33622480.jpeg" alt="Stunning Night View of New York City Skyline. Photo by Artūras Kokorevas">
         </div> 
         </div>
 
