Menambah kontainer footer

--- a/index.html
+++ b/index.html
@@ -62,16 +62,21 @@
       </div>
 
       <div class="tiga">
-        <div class="testimoni">This is an inspiring qoute, ora a testomonial from a customer</div>
-        <div class="nama-pelanggan">- Thor, God</div>
+        <div class="testimoni">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </div>
+        <div class="nama-pelanggan">- Thor, God of Thunder</div>
       </div>
       
       <div class="empat">
         <div class="empat-kontainer">
-          <div class="judul-pemberitahuan">Call to action! it's time!</div>
-          <div class="isi-pemberitahuan">Sign up for our product</div>
+          <div class="sub-kontainer">
+            <div class="judul-pemberitahuan">Call to action! it's time!</div>
+            <div class="isi-pemberitahuan">Sign up for our product, Ut enim ad minim veniam, quis nostrud</div>
+          </div>
           <button class="sign-up">Sign Up</button>
         </div>
+      </div>
+      <div class="footer">
+        <div class="copyright"> Copyright © The Odin Project 2021</div>
       </div>
     </div>
   </body>
