Menengahan teks pada dua-kontainerr

--- a/index.html
+++ b/index.html
@@ -41,19 +41,19 @@
       <div class="dua">
         <div class="judul-dua">Some random Information.</div>
         <div class="dua-kontainer">
-          <div class="sub-kontainer-satu">
+          <div class="sub-kontainer">
             <div class="kotak-gambar"></div>
             <div class="keterangan-gambar">this some subtext under an illustration or image</div>
           </div>
-          <div class="sub-kontainer-dua">
+          <div class="sub-kontainer">
             <div class="kotak-gambar"></div>
             <div class="keterangan-gambar">this some subtext under an illustration or image</div>
           </div>
-          <div class="sub-kontainer-tiga">
+          <div class="sub-kontainer">
             <div class="kotak-gambar"></div>
             <div class="keterangan-gambar">this some subtext under an illustration or image</div>
           </div>
-          <div class="sub-kontainer empat">
+          <div class="sub-kontainer">
             <div class="kotak-gambar"></div>
             <div class="keterangan-gambar">this some subtext under an illustration or image</div>
           </div>
